# wpa_supplicant-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/commands/: architecture-starter.md  corrective-action-loop.md  design-starter.md  phase-gate-check.md  project-kickoff.md  requirements-elicit.md  requirements-validate.md  security-review.md  tdd-compile.md  test-validate.md  traceability-builder.md
.github/workflows/: ci.yml
01-stakeholder-requirements/: README.md
01-stakeholder-requirements/business-context/: business-case.md
01-stakeholder-requirements/stakeholders/: stakeholder-register.md
02-requirements/: README.md  traceability-matrix.md  ubiquitous-language.md
02-requirements/functional/: req-f-cp.md  req-f-eap.md  req-f-eapol.md  req-f-logon.md  req-f-mka.md  req-f-pae.md
02-requirements/non-functional/: req-nf.md
02-requirements/user-stories/: user-stories.md
03-architecture/: README.md  context-map.md
03-architecture/adr/: adr-err-005.md  adr-evt-007.md  adr-ff-006.md  adr-kdf-008.md  adr-sec-004.md  adr-sm-002.md  adr-tmr-003.md  adr-ws-001.md
03-architecture/quality-scenarios/: qa-sc-mod-004.md  qa-sc-perf-001.md  qa-sc-rel-003.md  qa-sc-sec-002.md
04-design/: README.md  phase-gate-report.md
04-design/components/: eap-peer.md  eapol-supp.md  logon.md  pae-core.md  wpa-supplicant.md
04-design/interfaces/: trait-interfaces.md
04-design/patterns/: ddd-patterns.md
05-implementation/: README.md
05-implementation/docs/: implementation-priority-nf.md  implementation-priority.md  security-review-p4.md
06-integration/: README.md
07-verification-validation/: README.md
08-transition/: README.md
09-operation-maintenance/: README.md
SKILL/: README.md  WORKFLOW-GUIDE.md
SKILL/agents/: README.md  architecture-strategist.md  design-engineer.md  documentation-expert.md  requirements-analyst.md  security-analyst.md  tdd-driver.md  testing-specialist.md
SKILL/instructions/: phase-01-stakeholder-requirements.instructions.md  phase-02-requirements.instructions.md  phase-03-architecture.instructions.md  phase-04-design.instructions.md  phase-05-implementation.instructions.md  phase-06-integration.instructions.md  phase-07-verification-validation.instructions.md  phase-08-transition.instructions.md  phase-09-operation-maintenance.instructions.md  root.instructions.md
SKILL/prompts/: README.md  architecture-starter.prompt.md  corrective-action-loop.prompt.md  design-starter.prompt.md  phase-gate-check.prompt.md  project-kickoff.prompt.md  requirements-elicit.prompt.md  requirements-validate.prompt.md  security-review.prompt.md  tdd-compile.prompt.md  test-validate.prompt.md  traceability-builder.prompt.md
SKILL/skills/: README.md
SKILL/skills/8021x-domain-model/: SKILL.md
SKILL/skills/architecture-governance/: SKILL.md
SKILL/skills/detailed-design/: SKILL.md
SKILL/skills/documentation-governance/: SKILL.md
SKILL/skills/requirements-traceability/: SKILL.md
SKILL/skills/rust-tdd-implementation/: SKILL.md
SKILL/skills/security-review/: SKILL.md
SKILL/skills/verification-validation/: SKILL.md
crates/eap-peer/: Cargo.toml
crates/eap-peer/src/: eap_peap.rs  eap_teap.rs  eap_tls.rs  key_derivation.rs  lib.rs  peer.rs
crates/eapol-supp/: Cargo.toml
crates/eapol-supp/src/: announcement.rs  frame.rs  lib.rs  receiver.rs  supplicant_pae.rs  transmitter.rs
crates/logon/: Cargo.toml
crates/logon/src/: cak_cache.rs  lib.rs  logon_sm.rs  nid.rs
crates/pae/: Cargo.toml
crates/pae/src/: cp.rs  lib.rs  mka.rs  mkpdu.rs  port.rs  timer.rs
crates/wpa-supplicant/: Cargo.toml
crates/wpa-supplicant/src/: config.rs  control.rs  logging.rs  main.rs  network_io.rs  shutdown.rs  supplicant.rs  systemd.rs
docs/plan/: phase1-skill-creation.md
