[package]
name = "logon"
description = "Logon Process state machine per IEEE 802.1X-2020 Clause 12"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
pae = { path = "../pae" }
eapol-supp = { path = "../eapol-supp" }
tracing.workspace = true
thiserror.workspace = true

[features]
default = []
