[package]
name = "pae"
description = "PAE, MKA, and CP state machines per IEEE 802.1X-2020 Clauses 9-10"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true, optional = true }
thiserror = { version = "2", optional = true }
zeroize = { workspace = true, features = ["derive"] }
aes = { version = "0.8", optional = true }
cmac = { version = "0.7", optional = true }
digest = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["dep:tracing", "dep:thiserror", "dep:aes", "dep:cmac", "dep:digest", "dep:getrandom"]
macsec = []
